<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/menu_action_home"/>
    <item
        android:id="@+id/nav_following"
        android:icon="@drawable/ic_menu_gallery"
        android:title="Following"/>
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_action_favorites"/>
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_action_explore"/>
    <item
        android:id="@+id/nav_configuration"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_action_configuration"/>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_action_about"/>
  </group>

</menu>
